--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <script defer type="module" src="./index.js"></script>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
+    <include src="./partials/modal.html"></include>
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
     <include src="./partials/advantages.html"></include>
